<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nisira.view.Activity.Login_Activity">


    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/psssinfondo"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:id="@+id/imageView"
            android:layout_above="@+id/linearl_1"
            android:paddingBottom="15dp" />

        <LinearLayout
            android:id="@+id/linearl_1"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/txtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/usuario"
                android:inputType="textPersonName"
                android:singleLine="false" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:textStyle="normal" />

            <Button
                android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"

                android:id="@+id/button" />

            <Switch
                android:id="@+id/switch_sincroniza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sincroniza"
                android:onClick="onClick"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="15sp"

                    android:text="¿Olvidaste tu contraseña?"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
